# site-tests

.github/workflows/: ci.yml
electrovan-app/: .gitignore  index.html  package-lock.json  package.json
electrovan-app/src/: App.jsx  main.jsx
electrovan-app/src/animations/: gsap.js
electrovan-app/src/assets/styles/: benefits.css  catalog.css  cta.css  directions.css  footer.css  global.css  header.css  help.css  hero.css  popular.css  reset.css  trust.css  typography.css  value.css  variables.css
electrovan-app/src/components/: BrandsCarousel.jsx  CTAmodal.jsx  DirectionsCard.jsx  Footer.jsx  Header.jsx  Paginator.jsx  PopularCard.jsx
electrovan-app/src/components/catalog/: CatalogCard.jsx  CatalogModal.jsx  SingleCard.jsx
electrovan-app/src/data/: cars.js  popularcar.js
electrovan-app/src/sections/: Benefits.jsx  CTA.jsx  Catalog.jsx  Directions.jsx  HelpPage.jsx  Hero.jsx  PopularCar.jsx  Trust.jsx  Value.jsx
electrovan-app/src/store/: useCatalogStore.js
project/: README.md  pyproject.toml
project/.github/workflows/: ci.yml
project/src/: cars.py  catalog.py  forms.py  jsx_parser.py  paginator.py
project/tests/: test_catalog.py  test_failing_demo.py  test_forms.py  test_paginator.py
